--- a/10_flask-jinja/templates/model_tmplt.html
+++ b/10_flask-jinja/templates/model_tmplt.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<!-- 
-  Clyde 'Thluffy' Sinclair
+<!--
+  Holi Goramali: Erica (hugo), Gordon (The BlueMan)
+  10_flask-jinja - Using templates
   SoftDev
-  Oct 2022
+  2022-10-13
  -->
 
 <html>
@@ -19,4 +20,3 @@
   </body>
 
 </html>
-
