--- a/19_session/templates/welcome.html
+++ b/19_session/templates/welcome.html
@@ -9,6 +9,8 @@
       <h1>
         You're logged in!
       </h1>
+      <form method = "POST" action="/logout">
+        <input type="Submit" name="logout">
     </body>
   
   </html>
