--- a/19_session/templates/login.html
+++ b/19_session/templates/login.html
@@ -1,26 +1,47 @@
+<!--
+Henali: Erica (hugo), Henry (e), Aahan (spikes)
+19_Session
+SoftDev
+2022-11-03
+time spent: 2.5 hr
+
+DISCO:
+QCC:
+-->
 <!DOCTYPE html>
 <html>
 
     <head>
       <title> LOGIN PAGE </title>
     </head>
-  
+
     <body>
       <h1>
         Welcome, Travelers of the Intertoobz!
       </h1>
-  
-  
+
+
       <h3>
         Enter your username and password below to proceed.
       </h3>
+
       <form method = "POST" action="/welcome">
         <input type="text" name="username">
         <input type="text" name="password">
         <input type="submit" name="sub1">
       </form>
+
       <br>
+
+      <h3>
+        {{additional}}
+      </h3>
+
+      <br>
+      <br>
+
+      TNPG: Henali
+      Erica (hugo), Henry (e), Aahan (spikes)
     </body>
-  
+
   </html>
-  
