--- a/19_session/templates/welcome.html
+++ b/19_session/templates/welcome.html
@@ -1,17 +1,32 @@
+<!--
+Henali: Erica (hugo), Henry (e), Aahan (spikes)
+19_Session
+SoftDev
+2022-11-03
+time spent: 2.5 hr
+
+DISCO:
+QCC:
+-->
 <!DOCTYPE html>
 <html>
 
     <head>
       <title> WELCOME PAGE </title>
     </head>
-  
+
     <body>
       <h1>
-        You're logged in!
+        Welcome {{username}}, you're logged in!
       </h1>
+      Log Out:
       <form method = "POST" action="/logout">
         <input type="Submit" name="logout">
     </body>
-  
+
+    <br>
+    <br>
+
+    TNPG: Henali
+    Erica (hugo), Henry (e), Aahan (spikes)
   </html>
-  
