--- a/20_restapi/templates/main.html
+++ b/20_restapi/templates/main.html
@@ -17,11 +17,8 @@ time spent:
         stevejobsghost: Erica (hugo), Verit (Nibbles)
       </h1>
 
-      <form method = "POST" action="/welcome">
-        <input type="text" name="username">
-        <input type="text" name="password">
-        <input type="submit" name="sub1">
-      </form>
+      <img src="{{ url }}" alt="daily suprise photo of the universe">
+
     </body>
 
   </html>
