--- a/20_restapi/templates/main.html
+++ b/20_restapi/templates/main.html
@@ -3,7 +3,7 @@ stevejobsghost: Erica (hugo), Verit (Nibbles)
 K20: REST API
 SoftDev
 2022-11-21
-time spent: 
+time spent: 0.5 hr
 -->
 <!DOCTYPE html>
 <html>
