--- a/20_restapi/templates/main.html
+++ b/20_restapi/templates/main.html
@@ -15,6 +15,7 @@ time spent: 0.5 hr
     <body>
       <h1>
         stevejobsghost: Erica (hugo), Verit (Nibbles)
+        NASA's daily image: 
       </h1>
 
       <img src="{{ url }}" alt="daily suprise photo of the universe">
